fix the if condition